--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -114,6 +114,11 @@ ul {
     padding: 0 3rem;
 }
 
+.nav-active {
+    color: var(--primary-color);
+    font-weight: bold;
+}
+
 .txt-center {
     text-align: center;
 }
@@ -161,6 +166,11 @@ h3.txt-size {
     height: 50rem;
     background-color: var(--white-color);
     box-shadow: 0 3px 20px rgba(214, 214, 214, 0.5);
+    transition: transform 0.5s ease-in-out;
+}
+
+.galery-item:hover {
+    transform: translateY(-1.5rem);
 }
 
 .galery-item > img {
